# Product-Catalog-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
alembic/: env.py
alembic/versions/: 20260508_01_initial_schema.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  products.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/repositories/: product.py  user.py
app/schemas/: auth.py  product.py
app/services/: auth.py  cache.py  product.py
tests/: conftest.py  test_auth.py  test_auth_dependencies.py  test_openapi_auth.py  test_product_service.py
